Bump version to flyway-10.11.1
Please see the GH release for the release notes

Update license header plugin