@@ -1,17 +1,21 @@
-/*
- * Copyright (C) Red Gate Software Ltd 2010-2024
- *
+/*-
+ * ========================LICENSE_START=================================
+ * flyway-core
+ * ========================================================================
+ * Copyright (C) 2010 - 2024 Red Gate Software Ltd
+ * ========================================================================
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- *
- *         http://www.apache.org/licenses/LICENSE-2.0
- *
+ * 
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ * 
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
+ * =========================LICENSE_END==================================
  */
 package org.flywaydb.core.internal.database;
 
@@ -36,33 +40,30 @@ public class DatabaseTypeRegister {
     private static final List<DatabaseType> SORTED_DATABASE_TYPES = new PluginRegister().getPlugins(DatabaseType.class).stream().sorted().collect(Collectors.toList());
 
     public static DatabaseType getDatabaseTypeForUrl(String url, Configuration configuration) {
-        List<DatabaseType> typesAcceptingUrl = getDatabaseTypesForUrl(url, configuration);
+        List<DatabaseType> typesAcceptingUrl =  getDatabaseTypesForUrl(url, configuration);
 
-        if (typesAcceptingUrl.size() > 0) {
-            if (typesAcceptingUrl.size() > 1) {
-                StringBuilder builder = new StringBuilder();
-                for (DatabaseType type : typesAcceptingUrl) {
-                    if (builder.length() > 0) {
-                        builder.append(", ");
-                    }
-                    builder.append(type.getName());
-                }
-
-                LOG.debug("Multiple databases found that handle url '" + redactJdbcUrl(url) + "': " + builder);
-            }
-            return typesAcceptingUrl.get(0);
+        if (typesAcceptingUrl.isEmpty()) {
+            throw new FlywayException("No database found to handle " + redactJdbcUrl(url, typesAcceptingUrl));
         } else {
-            throw new FlywayException("No database found to handle " + redactJdbcUrl(url));
+            return typesAcceptingUrl.get(0);
         }
     }
 
-    private static List<DatabaseType> getDatabaseTypesForUrl(String url, Configuration configuration) {
-        return SORTED_DATABASE_TYPES.stream()
+    public static List<DatabaseType> getDatabaseTypesForUrl(String url, Configuration configuration) {
+        List<DatabaseType> typesAcceptingUrl =  SORTED_DATABASE_TYPES.stream()
             .filter(type -> configuration == null ||
                 configuration.isCommunityDBSupportEnabled() ||
                 !(type instanceof CommunityDatabaseType))
             .filter(type -> type.handlesJDBCUrl(url))
-            .collect(Collectors.toList());
+            .toList();
+
+        if (typesAcceptingUrl.size() > 1) {
+            final String typeNames = String.join(",", typesAcceptingUrl.stream().map(DatabaseType::getName).toList());
+
+            LOG.debug("Multiple databases found that handle url '" + redactJdbcUrl(url, typesAcceptingUrl) + "': " + typeNames);
+        }
+
+        return typesAcceptingUrl;
     }
 
     public static DatabaseType getDatabaseTypeForEngineName(String engineName, Configuration configuration) {
